--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "observable_web",
   "private": true,
+  "license": "MPL-2",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
