--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
      */
     "allowJs": true,
     "checkJs": true,
+    "strictNullChecks": true,
     "isolatedModules": true
   },
   "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
