individual and aggregate; info pane layout

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,5 @@
 {
     "pluginSearchDirs": ["./node_modules"],
-    "plugins": ["prettier-plugin-svelte"]
+    "plugins": ["prettier-plugin-svelte"],
+    "bracketSameLine": true
 }
