--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -17,7 +17,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: set hash
         run: |
-          echo "hash=$(git rev-parse HEAD)"
+          echo "hash=$(git rev-parse HEAD)" >> $GITHUB_ENV
       - uses: docker/build-push-action@v3
         with:
           context: backend/
