--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,4 +15,4 @@ RUN apk add --no-cache sqlite zlib openssl
 WORKDIR /opt/server
 COPY --from=build /build/bin/server .
 
-CMD
+CMD ["sh", "-c", "KEMAL_ENV=production ./server --ssl-key-file ${KEY_FILE} --ssl-cert-file ${CERT_FILE}"]
