--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,20 @@
 FROM alpine:latest as build
-RUN apk add --no-cache crystal shards sqlite-dev zlib-dev openssl-dev
+RUN apk add --no-cache crystal shards sqlite-dev zlib-dev openssl-dev libcrypto3 libpq-dev
 
 WORKDIR /build
 COPY shard.* .
-COPY ./src ./src/
+RUN shards install
 
+COPY ./src ./src/
 RUN shards build
 
 # Run
 FROM alpine:latest
 
-RUN apk add --no-cache sqlite zlib openssl
+RUN apk add --no-cache gc pcre libevent libpq sqlite-libs zlib libssl3 libcrypto3 bash
 
 WORKDIR /opt/server
 COPY --from=build /build/bin/server .
+COPY run .
 
-CMD ["sh", "-c", "KEMAL_ENV=production ./server --ssl-key-file ${KEY_FILE} --ssl-cert-file ${CERT_FILE}"]
+CMD ["bash", "./run"]
