--- a/backend/shard.yml
+++ b/backend/shard.yml
@@ -15,6 +15,8 @@ dependencies:
     github: crystal-lang/crystal-sqlite3
   kemal:
     github: kemalcr/kemal
+  redis:
+    github: stefanwille/crystal-redis
 
 # development_dependencies:
 #   webmock:
