--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,7 +11,7 @@ RUN shards build
 # Run
 FROM alpine:latest
 
-RUN apk add --no-cache gc pcre libevent libpq sqlite-libs zlib libssl3 libcrypto3 bash
+RUN apk add --no-cache gc pcre libevent libpq sqlite-libs zlib libssl3 libcrypto3 gmp bash
 
 WORKDIR /opt/server
 COPY --from=build /build/bin/server .
