--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/tabulator-tables": "^5.5.1",
 		"autoprefixer": "^10.4.15",
 		"postcss": "^8.4.29",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
+		"sass": "^1.66.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"tailwindcss": "^3.3.3",
@@ -27,6 +29,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"lucide-svelte": "^0.274.0"
+		"lucide-svelte": "^0.274.0",
+		"tabulator-tables": "^5.5.2"
 	}
 }
