--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	"type": "module",
 	"dependencies": {
 		"lucide-svelte": "^0.274.0",
+		"svelte-markdown": "^0.4.0",
 		"tabulator-tables": "^5.5.2"
 	}
 }
