--- a/package.json
+++ b/package.json
@@ -29,8 +29,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"lucide-svelte": "^0.274.0",
-		"svelte-markdown": "^0.4.0",
-		"tabulator-tables": "^5.5.2"
+		"lucide-svelte": "^0.274.0"
 	}
 }
