--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 #:schema node_modules/wrangler/config-schema.json
-name = "my-svelte-app"
+name = "observable-web"
 compatibility_date = "2024-06-14"
 pages_build_output_dir = ".svelte-kit/cloudflare"
 
