--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "@libsql/client": "^0.6.2",
     "lucide-svelte": "^0.395.0",
     "sqids": "^0.3.0"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
